Título con autor

--- a/calculator.html
+++ b/calculator.html
@@ -13,6 +13,7 @@ function square() {
 </script>
 </head>
 <body>
+  </h1>Alejandro Martínez Ronda</h1>
   Number:
   <input type="text" id="n1"><p>
 
